# mvpv2-NLI-semantic

./: .env  .gitignore  .~lock.Project Submission Deck _ AMD Slingshot.pptx#  Project Submission Deck _ AMD Slingshot.pptx  README.md  main.py  pyproject.toml  rules.json  test_generic.py  test_input.txt  test_input_minimal.txt  test_input_weak.txt  test_regression.py
api/: main.py
engine/: evaluator.py  llm_suggester.py  loader.py  matcher.py  pdf_reader.py  report.py  semantic.py  service.py  text_utils.py
frontend/: index.html
reports/: 807205a5-a5f7-44cd-a0d4-d6bf4df7042f_report.json  Sample_Hospital_Policy_and_Procedures_Manual_report.json  ec9439b6-0e9d-4bb2-9838-60881d03c716_report.json  f4b51ee3-49d6-469e-a6c4-4007c16bab1b_report.json  strong-doc_report.json  weak-doc_report.json
